--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^15.4.2",
+    "react-audio-player": "^0.3.3",
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
